@@ -9,13 +9,11 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.List;
-import java.util.UUID;
+import java.util.*;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutionException;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -32,73 +30,87 @@ public class TransactionServiceImplTest {
     void setup() {
         transactions = new ArrayList<>();
 
+        Transaction.TransactionType withdrawalType = Transaction.TransactionType.WITHDRAWAL;
+        Transaction.TransactionType topupType = Transaction.TransactionType.TOPUP;
+        Transaction.OwnerType supermarketType = Transaction.OwnerType.SUPERMARKET;
+        Transaction.OwnerType userType = Transaction.OwnerType.USER;
+
         UUID ownerId1 = UUID.randomUUID();
         Date transactionDate1 = new Date();
         double amount1 = 200.00;
-        Transaction.TransactionType transactionType1 = Transaction.TransactionType.WITHDRAWAL;
-        Transaction transaction1 = new Transaction(ownerId1, transactionDate1, amount1, transactionType1);
+        Transaction transaction1 = new Transaction(ownerId1, userType, transactionDate1, amount1, withdrawalType);
         transactions.add(transaction1);
 
         UUID ownerId2 = UUID.randomUUID();
         Date transactionDate2 = new Date();
         double amount2 = 100.00;
-        Transaction.TransactionType transactionType2 = Transaction.TransactionType.TOPUP;
-        Transaction transaction2 = new Transaction(ownerId2, transactionDate2, amount2, transactionType2);
+        Transaction transaction2 = new Transaction(ownerId2, supermarketType, transactionDate2, amount2, topupType);
         transactions.add(transaction2);
 
         // transaction with same owner as transaction1
         Date transactionDate3 = new Date();
         double amount3 = 200.00;
-        Transaction.TransactionType transactionType3 = Transaction.TransactionType.WITHDRAWAL;
-        Transaction transaction3 = new Transaction(ownerId1, transactionDate3, amount3, transactionType3);
+        Transaction transaction3 = new Transaction(ownerId1, userType, transactionDate3, amount3, topupType);
         transactions.add(transaction3);
     }
 
     @Test
     void testCreateTransaction() {
-        Transaction transaction = transactions.getFirst();
+        Transaction transaction = transactions.get(0);
 
         doReturn(transaction).when(transactionRepository).save(transaction);
 
-        Transaction result = transactionService.createTransaction(transaction);
-        verify(transactionRepository, times(1)).save(transaction);
-        assertEquals(transaction, result);
+        CompletableFuture<Transaction> resultFuture = transactionService.createTransaction(transaction);
+        try {
+            Transaction result = resultFuture.get();
+            verify(transactionRepository, times(1)).save(transaction);
+            assertEquals(transaction, result);
+        } catch (InterruptedException | ExecutionException e) {
+            e.printStackTrace();
+        }
     }
-
-    @Test
-    void testCreateTransactionIfAlreadyExists() {
-        Transaction transaction = transactions.getFirst();
-
-        doReturn(transaction).when(transactionRepository).findById(transaction.getId());
-        assertNull(transactionService.createTransaction(transaction));
-        verify(transactionRepository, times(0)).save(transaction);
-    }
-
     @Test
     void TestFindByIdFound() {
-        Transaction transaction = transactions.getFirst();
+        Transaction transaction = transactions.get(0);
+        Optional<Transaction> found = Optional.of(transaction);
 
-        doReturn(transaction).when(transactionRepository).findById(transaction.getId());
-        Transaction result = transactionService.findById(transaction.getId());
-        assertEquals(transaction, result);
+        doReturn(found).when(transactionRepository).findById(transaction.getId());
+        CompletableFuture<Optional<Transaction>> resultFuture = transactionService.findById(transaction.getId());
+        try {
+            Optional<Transaction> result = resultFuture.get();
+            assertEquals(transaction, result.get());
+        } catch (InterruptedException | ExecutionException e) {
+            e.printStackTrace();
+        }
     }
 
     @Test
     void TestFindByIdNotFound() {
-        Transaction transaction = transactions.getFirst();
+        Transaction transaction = transactions.get(0);
 
-        doReturn(null).when(transactionRepository).findById(transaction.getId());
-        assertNull(transactionService.findById(transaction.getId()));
+        doReturn(Optional.empty()).when(transactionRepository).findById(transaction.getId());
+        CompletableFuture<Optional<Transaction>> resultFuture = transactionService.findById(transaction.getId());
+        try {
+            Optional<Transaction> result = resultFuture.get();
+            assertEquals(Optional.empty(), result);
+        } catch (InterruptedException | ExecutionException e) {
+            e.printStackTrace();
+        }
     }
 
     @Test
     void TestFindByOwnerIdNotEmpty() {
-        Transaction transaction = transactions.getFirst();
+        Transaction transaction = transactions.get(0);
         List<Transaction> ownerTransactions = new ArrayList<>();
         ownerTransactions.add(transaction);
 
         doReturn(ownerTransactions).when(transactionRepository).findByOwnerId(transaction.getOwnerId());
-        List<Transaction> resultTransactions = transactionService.findByOwnerId(transaction.getOwnerId());
-        assertEquals(ownerTransactions, resultTransactions);
+        CompletableFuture<List<Transaction>> resultFuture = transactionService.findByOwnerId(transaction.getOwnerId());
+        try {
+            List<Transaction> resultTransactions = resultFuture.get();
+            assertEquals(ownerTransactions, resultTransactions);
+        } catch (InterruptedException | ExecutionException e) {
+            e.printStackTrace();
+        }
     }
 }
